--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: post-index
-title: "Welcome to the Neo-HPSTR Blog"
-description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+title: "Dias Taufik Rahman"
+description: "Tutorial, Catatan, Tugas Kampus."
+tags: [php, laravel, framework, server, linux, tugas]
 comments: false
 ---
 
